--- a/mosaics_download.ipynb
+++ b/mosaics_download.ipynb
@@ -49,22 +49,22 @@
     "    {\n",
     "        \"name\": \"Lombok2018\",\n",
     "        \"area\": LOMBOK_PATH / \"area.shp\",\n",
-    "        \"dates\": [datetime(2018, 9, 9), datetime(2018, 9, 13), datetime(2018, 9, 27)],\n",
+    "        \"dates\": [datetime(2018, 8, 5), datetime(2018, 8, 19)],\n",
     "    },\n",
     "    {\n",
     "        \"name\": \"Philippines2019\",\n",
     "        \"area\": PHILIPPINES_PATH / \"area_study.shp\",\n",
-    "        \"dates\": [datetime(2020, 5, 2)],\n",
+    "        \"dates\": [datetime(2019, 10, 16), datetime(2019, 10, 29), datetime(2019, 10, 31), datetime(2019, 12, 15)],\n",
     "    },\n",
     "    {\n",
     "        \"name\": \"Michoacan2022\",\n",
     "        \"area\": EMILIA_PATH / \"Area_rev.shp\",\n",
-    "        \"dates\": [datetime(2022, 9, 25), datetime(2022, 10, 31)],\n",
+    "        \"dates\": [datetime(2022, 9, 19)],\n",
     "    },\n",
     "    {\n",
     "        \"name\": \"EmiliaRomagna2023\",\n",
     "        \"area\": MICHOACAN_PATH / \"investigated_area_LS_Michoacan2022.shp\",\n",
-    "        \"dates\": [datetime(2023, 5, 22)],\n",
+    "        \"dates\": [datetime(2023, 5, 16), datetime(2023, 5, 17)],\n",
     "    },\n",
     "]\n"
    ]
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "7f7fe7d0-fe6b-4701-981c-3367b1776f47",
    "metadata": {},
    "outputs": [
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "960ac7ae-abd1-4d19-9a03-c76ccae62691",
    "metadata": {
     "scrolled": true
@@ -197,7 +197,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "BBox: -103.80677481469864,18.045478969815502,-102.52750458527831,19.105736218064283\n",
+      "BBox: 116.03246503532793,-8.56332060429984,116.70731520051434,-8.257044874009\n",
       "Status code: 200\n",
       "No quads found for the given bbox.\n"
      ]
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "286f280f-a3c2-4db5-901b-1b0d1624cff7",
    "metadata": {},
    "outputs": [
@@ -253,7 +253,7 @@
        "\"\\nfor i in items:\\n    link = i['_links']['download']\\n    name = i['id']\\n    name = name + '.tiff'\\n    DIR = 'quads/test'\\n    filename = os.path.join(DIR, name)\\n\\n    # remove the comment to actually download images\\n    if not os.path.isfile(filename):\\n        pass\\n        #urllib.request.urlretrieve(link, filename)\\n\""
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "5c23f337-2f45-416f-82e4-a3156b1c715d",
    "metadata": {},
    "outputs": [],
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "id": "2e021924-050f-4925-a0cb-67be05db2db2",
    "metadata": {},
    "outputs": [
@@ -329,112 +329,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Looking for mosaic: global_monthly_2018_08_mosaic\n",
+      "Using mosaic_id: 513bc1c8-25b3-4dee-b80c-cdc8e4b2099a\n",
+      "Status code for quads (before): 200\n",
+      "Looking for mosaic: global_monthly_2018_10_mosaic\n",
+      "Using mosaic_id: 28be1b87-3bda-4644-b087-e39c141e2634\n",
+      "Status code for quads (after): 200\n",
+      "Looking for mosaic: global_monthly_2020_04_mosaic\n",
+      "Using mosaic_id: 8b9dd650-dc7e-4082-a37f-867250a1cb6e\n",
+      "Status code for quads (before): 200\n",
+      "Looking for mosaic: global_monthly_2020_06_mosaic\n",
+      "Using mosaic_id: dfd557ec-a498-418a-9b1b-f7fa61f758b5\n",
+      "Status code for quads (after): 200\n",
+      "Looking for mosaic: global_monthly_2022_08_mosaic\n",
+      "Using mosaic_id: d5e3fd0f-a258-42b7-9305-8cc40a1edb78\n",
+      "Status code for quads (before): 200\n",
+      "Looking for mosaic: global_monthly_2022_11_mosaic\n",
+      "Using mosaic_id: c8f1f87c-f2f7-477b-a875-4045ae517975\n",
+      "Status code for quads (after): 200\n",
       "Looking for mosaic: global_monthly_2023_04_mosaic\n",
       "Using mosaic_id: 8c90df74-3736-4950-afdb-9de3063d7a3f\n",
       "Status code for quads (before): 200\n",
-      "Downloading quads/EmiliaRomagna2023/433-1134_before.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/434-1134_before.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/435-1134_before.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/436-1134_before.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/437-1134_before.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/438-1134_before.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/439-1134_before.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/440-1134_before.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/433-1133_before.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/434-1133_before.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/435-1133_before.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/436-1133_before.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/437-1133_before.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/438-1133_before.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/439-1133_before.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/440-1133_before.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/433-1132_before.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/434-1132_before.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/435-1132_before.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/436-1132_before.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/437-1132_before.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/438-1132_before.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/439-1132_before.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/440-1132_before.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/433-1131_before.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/434-1131_before.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/435-1131_before.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/436-1131_before.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/437-1131_before.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/438-1131_before.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/439-1131_before.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/440-1131_before.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/433-1130_before.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/434-1130_before.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/435-1130_before.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/436-1130_before.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/437-1130_before.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/438-1130_before.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/439-1130_before.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/440-1130_before.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/434-1129_before.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/435-1129_before.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/436-1129_before.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/437-1129_before.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/438-1129_before.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/439-1129_before.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/440-1129_before.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/436-1128_before.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/437-1128_before.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/438-1128_before.tiff\n",
       "Looking for mosaic: global_monthly_2023_06_mosaic\n",
       "Using mosaic_id: 0a21cf28-7e4c-4eb7-895d-cc868e28e4ee\n",
-      "Status code for quads (after): 200\n",
-      "Downloading quads/EmiliaRomagna2023/433-1134_after.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/434-1134_after.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/435-1134_after.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/436-1134_after.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/437-1134_after.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/438-1134_after.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/439-1134_after.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/440-1134_after.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/433-1133_after.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/434-1133_after.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/435-1133_after.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/436-1133_after.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/437-1133_after.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/438-1133_after.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/439-1133_after.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/440-1133_after.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/433-1132_after.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/434-1132_after.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/435-1132_after.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/436-1132_after.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/437-1132_after.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/438-1132_after.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/439-1132_after.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/440-1132_after.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/433-1131_after.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/434-1131_after.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/435-1131_after.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/436-1131_after.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/437-1131_after.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/438-1131_after.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/439-1131_after.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/440-1131_after.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/433-1130_after.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/434-1130_after.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/435-1130_after.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/436-1130_after.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/437-1130_after.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/438-1130_after.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/439-1130_after.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/440-1130_after.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/434-1129_after.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/435-1129_after.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/436-1129_after.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/437-1129_after.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/438-1129_after.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/439-1129_after.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/440-1129_after.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/436-1128_after.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/437-1128_after.tiff\n",
-      "Downloading quads/EmiliaRomagna2023/438-1128_after.tiff\n"
+      "Status code for quads (after): 200\n"
      ]
     }
    ],
@@ -580,14 +498,6 @@
     "mergeTiff()\n",
     "mergeTiff(suffix=\"after\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "236d960e-c7af-4768-a524-e814962080a0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
